--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,5 +29,5 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/brunomioto/futebolplotR
+URL: https://github.com/brunomioto/futebolplotR, https://brunomioto.github.io/futebolplotR/
 BugReports: https://github.com/brunomioto/futebolplotR/issues
