--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,38 +1,26 @@
 url: https://brunomioto.github.io/futebolplotR/
 template:
   bootstrap: 5
-
 reference:
-
 - title: Geoms
-  desc: >
-    ggplot2 geoms (geometric objects) that create a `layer()`. A layer combines data,
-    aesthetic mapping, a geom (geometric object), a stat (statistical transformation),
-    and a position adjustment.
-  contents:
-  - starts_with("geom_")
-
+  desc: |
+    ggplot2 geoms (geometric objects) that create a `layer()`. A layer combines data, aesthetic mapping, a geom (geometric object), a stat (statistical transformation), and a position adjustment.
+  contents: starts_with("geom_")
 - title: Scales
-  desc: >
-    Scales control the details of how data values are translated to visual
-    properties. Override the default scales to tweak details like the axis
-    labels or legend keys, or to use a completely different translation from
-    data to aesthetic.
-  contents:
-  - starts_with("scale")
-
+  desc: |
+    Scales control the details of how data values are translated to visual properties. Override the default scales to tweak details like the axis labels or legend keys, or to use a completely different translation from data to aesthetic.
+  contents: starts_with("scale")
 - title: Theme Elements
-  desc: >
-    Themes control the display of all non-data elements of the plot. Theme elements
-    can tweak individual settings inside `theme()`.
+  desc: |
+    Themes control the display of all non-data elements of the plot. Theme elements can tweak individual settings inside `theme()`.
   contents:
   - starts_with("element")
   - starts_with("theme")
-
 - title: Utilities
-  desc: >
+  desc: |
     Various helper functions.
   contents:
   - clean_team_abbrs
   - valid_team_names
   - ends_with("team_abbr_mapping")
+
