testing description imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,7 @@ export(valid_team_names)
 import(cli)
 import(ggpath)
 import(grid)
+import(rlang)
 importFrom(ggplot2,element_grob)
+importFrom(glue,glue)
+importFrom(lifecycle,deprecated)
