--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,39 +1,39 @@
 Package: futebolplotR
 Title: Brazilian Soccer Badges Plots in 'ggplot2'
 Version: 0.0.1
-Authors@R: 
-    c(person(given = "Bruno",
-             family = "Mioto",
-             role = c("cre", "aut"),
-             email = "brunomioto97@gmail.com"),
-      person(given = "Gabriela",
-             family = "Junqueira",
-             role = "aut",
-             email = "mg.junqueira@hotmail.com"))
-Description: A set of functions to visualize Brazilian Soccer
-    analysis in 'ggplot2'.
+Authors@R: c(
+    person("Bruno", "Mioto", , "brunomioto97@gmail.com", role = c("cre", "aut")),
+    person("Gabriela", "Junqueira", , "mg.junqueira@hotmail.com", role = "aut")
+  )
+Description: A set of functions to visualize Brazilian Soccer analysis in
+    'ggplot2'.
 License: MIT + file LICENSE
+URL: https://github.com/brunomioto/futebolplotR,
+    https://brunomioto.github.io/futebolplotR/
+BugReports: https://github.com/brunomioto/futebolplotR/issues
 Depends: 
     R (>= 3.6)
 Imports: 
     brasileirao,
     cli (>= 3.0.0),
-    dplyr,
     ggpath (>= 1.0.0),
     ggplot2 (>= 3.3.0),
+    glue,
     grid,
+    lifecycle,
     rlang (>= 0.4.11),
-    scales (>= 1.1.0)
-Remotes: 
-    williamorim/brasileirao
+    scales (>= 1.1.0),
+    withr
 Suggests: 
+    dplyr (>= 1.0.0),
+    rsvg (>= 2.0),
     testthat (>= 3.0.0),
     vdiffr
+Remotes: 
+    williamorim/brasileirao
+Config/Needs/website: rmarkdown
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/brunomioto/futebolplotR, https://brunomioto.github.io/futebolplotR/
-BugReports: https://github.com/brunomioto/futebolplotR/issues
-Config/Needs/website: rmarkdown
